@@ -29,7 +29,7 @@
 			<div id="game-info">
 				<!-- Game Info Here {Current|X|O}//-->
 				<span id="current-player-text">Next up</span><br/>
-				<img src="static/blank.svg" id="current-player-image" /><br/><br/>
+				<div id="current-player-image" ></div><br/>
 				Player <img src="static/x.svg" class="text-image" />: <span id="player-x-name">?</span><br/> 
 				Player <img src="static/o.svg" class="text-image" />: <span id="player-o-name">?</span><br/> 
 			</div>
