@@ -116,6 +116,12 @@ h2{
 
 #current-player-image{
 	height:3em;
+	width:3em;
+	display:block;
+	margin:auto;
+	
+	background-image:url("blank.svg");
+	background-size:100% 100%;
 }
 
 .inner-col{
